<resources>
    <string name="app_name">Klotski</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="game_start">Start Game</string>
    <string name="game_exit">Exit Game</string>
    <string name="count_steps">0</string>
    <string name="steps">Step</string>
    <string name="refresh">Restart</string>
    <string name="game_title">KLOTSKI</string>
    <string name="returnMain">Back</string>
    <string name="choose_game">Level</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
