<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/start"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="playGame"
        android:text="@string/game_start"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />


    <Button
        android:id="@+id/choose_game"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="chooseGame"
        android:text="@string/choose_game"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/rank"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="rankPage"
        android:text="R A N K"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_game" />

    <Button
        android:id="@+id/exit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="exitGame"
        android:text="@string/game_exit"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rank" />

    <TextView
        android:id="@+id/Big_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/game_title"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Current level: 1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Big_title"
        app:layout_constraintBottom_toTopOf="@+id/start" />

    <Button
        android:id="@+id/rule"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rounded_button"
        android:text="RULE"
        app:layout_constraintEnd_toStartOf="@+id/middle_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Big_title" />


</android.support.constraint.ConstraintLayout>